fix: make section seperator visible on mobile

--- a/styles.css
+++ b/styles.css
@@ -59,10 +59,10 @@ body {
 }
 
 /* Section separator */
-.line-separation {
+div.line-separation {
   width: 85%;
   margin: 0 auto;
-  border: 0.05rem, solid;
+  border: 0.05rem solid;
   border-image: var(--custom-separator);
 }
 
@@ -171,7 +171,7 @@ section.about {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 var(--horizontal-padding);
+  padding: 90px var(--horizontal-padding);
   gap: 70px;
 
   background-image: linear-gradient(to right, transparent, rgba(0, 0, 0, 0.1) 90%, rgba(0, 0, 0, 1)),
@@ -417,6 +417,7 @@ footer {
     url("Assets/img/black2.webp");
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
 
   .footer-info {
     display: flex;
